--- a/estilo-media-query.css
+++ b/estilo-media-query.css
@@ -242,7 +242,7 @@
     height: 5vh;
     color: #fff;
     font-size: 2.2em;
-    background: #df8a1b;
+    background: #e38d63;
     cursor: pointer;
     border-radius: 20px;
     margin-top: 8px;
@@ -652,7 +652,7 @@
     height: 40px;
     color: #fff;
     font-size: 16px;
-    background: #df8a1b;
+    background: #e38d63;
     cursor: pointer;
     border-radius: 20px;
     margin-top: 8px;
@@ -1033,7 +1033,7 @@
     height: 40px;
     color: #fff;
     font-size: 16px;
-    background: #df8a1b;
+    background: #e38d63;
     cursor: pointer;
     border-radius: 20px;
     margin-top: 8px;
@@ -1389,7 +1389,7 @@
     height: 40px;
     color: #fff;
     font-size: 16px;
-    background: #df8a1b;
+    background: #e38d63;
     cursor: pointer;
     border-radius: 20px;
     margin-top: 25px;
