fix: checkbox safari

--- a/estilo-media-query.css
+++ b/estilo-media-query.css
@@ -390,6 +390,7 @@
 
   .div-form-mobile input[type='checkbox'] {
     width: 4vh;
+    -webkit-transform: scale(2, 2);
   }
 
   .div-form-mobile .select {
