--- a/estilo-media-query.css
+++ b/estilo-media-query.css
@@ -322,6 +322,11 @@
     padding: 0;
   }
 
+  input {
+    -webkit-appearance: none;
+    border-radius: 0;
+  }
+
   .dobra-dois {
     width: 100%;
   }
